--- a/educonnect-frontend/src/index.css
+++ b/educonnect-frontend/src/index.css
@@ -11,3 +11,179 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Segoe UI", sans-serif;
+}
+
+.auth-wrapper {
+  display: flex;
+  min-height: 100vh;
+}
+
+/* LEFT SIDE (LOGIN / SIGNUP) */
+.auth-left {
+  width: 35%;
+  background: #0f0f0f;
+  color: white;
+  padding: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.auth-left h2 {
+  font-size: 28px;
+  margin-bottom: 10px;
+}
+
+.auth-left p {
+  color: #aaa;
+  margin-bottom: 30px;
+}
+
+.auth-left input {
+  margin-bottom: 15px;
+  padding: 12px;
+  border-radius: 6px;
+  border: none;
+}
+
+.auth-left button {
+  padding: 12px;
+  background: #8b5cf6;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.switch-text {
+  margin-top: 20px;
+}
+
+.switch-text span {
+  color: #8b5cf6;
+  cursor: pointer;
+}
+
+/* RIGHT SIDE (PURPLE PANEL) */
+.auth-right {
+  width: 65%;
+  background: #9b6df3;
+  color: white;
+  padding: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.auth-right h1 {
+  font-size: 48px;
+  font-weight: bold;
+}
+
+.auth-right h2 {
+  font-size: 42px;
+  font-weight: 300;
+}
+
+.auth-right p {
+  margin-top: 15px;
+  opacity: 0.9;
+}
+
+button {
+  outline: none;
+  border: none;
+  cursor: pointer;
+  padding: 8px 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  background-color: #8b5cf6;
+  color: white;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #7c4bd1;
+}
+button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+button:disabled:hover {
+  background-color: #ccc;
+}
+button.icon {
+  height: 36px;
+  width: 36px;
+  padding: 0px;
+  border-radius: 50%;
+}
+
+/* root page */
+.root-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  position: relative;
+}
+header {
+  position: sticky;
+  top: 0;
+  height: 64px;
+  width: 100%;
+  background: #0f0f0f;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+}
+
+section {
+  flex: 1;
+  width: 100%;
+  padding: 20px;
+}
+
+footer {
+  position: sticky;
+  bottom: 0;
+  height: 64px;
+  width: 100%;
+  background: #0f0f0f;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* posts */
+.posts-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.post-item {
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+.post-actions {
+  display: flex;
+  gap: 6px;
+}
